// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`--schema from parent directory --generator: should work - valid generator names 1`] = `

✔ Generated Prisma Client (0.0.0 | TEST_ENGINE_TYPE) to ./generated/client in XXXms

✔ Generated Prisma Client (0.0.0 | TEST_ENGINE_TYPE) to ./generated/client_3 in XXXms
You can now start using Prisma Client in your code. Reference: https://pris.ly/d/client
\`\`\`
import { PrismaClient } from './generated/client'
const prisma = new PrismaClient()
\`\`\`
`;

exports[`using cli should work with a custom output dir 1`] = `
Prisma schema loaded from prisma/schema.prisma

✔ Generated Prisma Client (0.0.0 | TEST_ENGINE_TYPE) to ./generated/client in XXXms
You can now start using Prisma Client in your code. Reference: https://pris.ly/d/client
\`\`\`
import { PrismaClient } from './generated/client'
const prisma = new PrismaClient()
\`\`\`
`;

exports[`using cli should work with a custom output dir 2`] = `
[
  {
    email: bob@bob.bob,
    id: 1,
    name: Bobby Brown Sqlite,
  },
]
`;
